--- a/css/store.css
+++ b/css/store.css
@@ -69,6 +69,82 @@ header .logo a {
   text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
   text-decoration: none;
 }
+
+.dropdown-container {
+  width: 400px;
+  margin: 0 auto;
+  position: relative;
+}
+
+.search-input {
+  width: 100%;
+  padding: 10px 15px;
+  font-size: 16px;
+  border-radius: 6px;
+  border: 1px solid #ccc;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  outline: none;
+}
+
+.dropdown-list {
+  position: absolute;
+  top: 45px;
+  width: calc(100% + 5px);
+  background: #fff;
+  border: 1px solid #ddd;
+  border-radius: 6px !important;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.15);
+  z-index: 1000;
+  max-height: 247px;
+  overflow-y: auto;
+}
+
+.dropdown-item {
+  display: flex;
+  padding: 10px;
+  cursor: pointer;
+  align-items: center;
+  border-bottom: 1px solid #eee;
+}
+
+.dropdown-item:last-child {
+  border-bottom: none;
+}
+
+.dropdown-item:hover {
+  background-color: #f5f5f5;
+}
+
+.dropdown-icon {
+  width: 40px;
+  height: 40px;
+  margin-right: 10px;
+  border-radius: 50%;
+  background-color: #e0e0e0;
+  overflow: hidden;
+}
+
+.dropdown-icon img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.dropdown-texts {
+  display: flex;
+  flex-direction: column;
+}
+
+.main-text {
+  font-size: 14px;
+  font-weight: bold;
+  color: #111;
+}
+
+.sub-text {
+  font-size: 13px;
+  color: #666;
+}
 /* Left menu */
 .leftMenu {
   list-style-type: none;
